--- a/monte-i/style.css
+++ b/monte-i/style.css
@@ -22,6 +22,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
     display: block;
 }
+input {
+  outline: none;
+}
 html {
   height: 100%;
   scroll-behavior: smooth;
@@ -48,7 +51,7 @@ a{
 }
 
 a:hover{
-  color: orange;
+  color: #f35e49;
 }
 
 table {
@@ -57,7 +60,7 @@ table {
 }
 body{
   background-color: #fff;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: 'Jost', sans-serif;
   margin: 0 auto;
 }
 
@@ -73,6 +76,7 @@ body{
 
 .title__item{
   font-size: 14pt;
+  font-weight: 500;
   color: #333;
   padding-left: 5px;
 }
@@ -102,7 +106,7 @@ body{
   font-weight: 700;
   padding-top: 15px;
   margin-left: 50px;
-  color: orange;
+  color: #f35e49;
   cursor: pointer;
 }
 
@@ -145,6 +149,7 @@ body{
   flex-direction: column;
   text-align: left;
   font-size: 12pt;
+  font-weight: 500;
   margin-top: 40%;
 }
 
@@ -157,7 +162,6 @@ body{
 
 .navig__left a{
   padding-left: 10px;
-
 }
 
 .main{
@@ -242,11 +246,11 @@ body{
   display: table-cell;
 }
 
-.search_input, .search_btn{
+.search__input, .search__btn{
   height: 30px;
 }
 
-.search_input{
+.search__input{
   width: 100%;
   border: solid 1px #ccc;
   border-radius: 10px;
@@ -254,9 +258,8 @@ body{
   padding: 4px;
 }
 
-
 .search__input:focus{
-  background-color: lightblue;
+  border: solid 2px #f35e49;
 } 
 
 .search__btn-cell{
@@ -264,17 +267,17 @@ body{
   display: table-cell;
 }
 
-.search_btn{
+.search__btn{
   margin-left: -35%;
   border: 1px solid #ccc;
   border-radius: 10px;
   border-bottom-color: #b3b3b3;
   cursor: pointer;
-  transition: .5s;
+  transition: .3s;
 }
 
-.search_btn:hover{
-  background-color: #ccc;
+.search__btn:hover{
+  border-color: #f35e49;
 }
 /* News
 =================================*/
@@ -300,8 +303,9 @@ body{
   background-color:transparent;height:281px;
 }
 
-/* Cars
+/* Section
 =================================*/
+
 .section_header{
   display: flex;
   align-items: baseline;
@@ -317,13 +321,57 @@ body{
 
 .section__items{
   display: flex;
-  font-size: 10pt;
+  font-size: 11pt;
+  font-weight: 400;
 }
 
 .section__item{
   margin-left: 20px;
 }
 
+/* Cars
+=================================*/
+.cards__display{
+  display: block;
+}
+
+.cards{
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.card{
+  position: relative;
+  width: 24%;
+  font-size: 11pt;
+  font-weight: 400;
+}
+
+.cards .card:first-child{
+  padding: 0;
+}
+
+.card__link{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 5;
+}
+
+.card__picture img{
+  width: 100%;
+}
+
+.card__title, .card__price{
+  margin: 6px;
+}
+
+.card__price{
+  margin-bottom: 0;
+}
 
 /* Media
 ================================= */
