--- a/monte-i/style.css
+++ b/monte-i/style.css
@@ -47,12 +47,13 @@ q:before, q:after {
 a{
   text-decoration: none;
   color: #333;
-  transition: .3s;
+  cursor: pointer;
 }
 
 a:hover{
   color: #f35e49;
 }
+
 
 table {
     border-collapse: collapse;
@@ -251,7 +252,7 @@ body{
 }
 
 .search__input{
-  width: 100%;
+  width: 100%; 
   border: solid 1px #ccc;
   border-radius: 10px;
   box-shadow: 0 1px 3px #eee inset;
@@ -273,7 +274,6 @@ body{
   border-radius: 10px;
   border-bottom-color: #b3b3b3;
   cursor: pointer;
-  transition: .3s;
 }
 
 .search__btn:hover{
@@ -329,6 +329,7 @@ body{
   margin-left: 20px;
 }
 
+
 /* Cars
 =================================*/
 .cards__display{
@@ -336,6 +337,10 @@ body{
 }
 
 .cards__moto{
+  display: none;
+}
+
+.cards__spares{
   display: none;
 }
 
@@ -371,8 +376,13 @@ body{
   z-index: 5;
 }
 
+.card__picture{
+  height: 110px;
+}
+
 .card__picture img{
   width: 100%;
+  height: 100%;
 }
 
 .card__title, .card__price{
