--- a/school/style.css
+++ b/school/style.css
@@ -57,15 +57,15 @@ p{
   text-indent: 40px;
 }
 
-@font-face {
-	
+@font-face {	
 	font-family: Felidae;
 	src: url(../fonts/Felidae.ttf);
 }
 
 body{
   font-family: 'Source Serif 4', serif;
-  font-size: 30pt;
+  font-size: 28pt;
+  line-height: 1.1;
   background-color: #fff;
   margin: 0;
 }
@@ -102,7 +102,7 @@ p{
 
   position: absolute;
   z-index: 1;
-  left: 38%;
+  left: 42%;
   top: 20%;
   width: 350px;
   cursor: pointer;
@@ -115,7 +115,6 @@ p{
 }
 
 .nav{
-
   display: flex;
 }
 
@@ -127,7 +126,7 @@ p{
 .nav__link{
   font-family: Felidae;
   color: #000;
-  margin-left: 50px;
+  margin-left: 100px;
   transition: .5s;
 }
 
@@ -213,14 +212,43 @@ li .text__l{
   padding-top: 10px;
 }
 
-.reg{
-  color: #eb4c00;
-  transition: .5s;
+.text__reg{
+  text-align: left;
+  text-indent: 20px;
 }
 
-.reg:hover{
-  text-decoration: underline;
+.btn{
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
+
+.but__link{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 5;
+}
+
+.button{
+  right: 10%;
+  position: relative;
+  font-family: Felidae;
+  color: #fff;
+  font-size: 34pt;
+  background-color: #eb4c00;
+  border: 0;
+  padding: 10px 80px;
+  border-radius: 5px;
+  transition: .3s;
+}
+
+.button:hover{
+  background-color: #cb4101;
+}
+
 
 .contacts{
   padding: 60px 0;
@@ -246,18 +274,6 @@ li .text__l{
   width: 80px;
 }
 
-.facebook{
-  width: 110px; 
-  margin-left: -15px; margin-top: -10px;
-}
-
-.facebook__a{
-  margin-left: -15px;margin-top: -10px;
-}
-
-.whatsapp{
-  margin-top: -15px;
-}
 
 /* nav-toggle
 ================================= */
@@ -363,20 +379,9 @@ li .text__l{
   }
 
   .header__inner{
-    font-size: 24pt;
     padding: 50px 10px;
   }
 
-  .nav__reg{
-    padding-left: 500px;
-  }
-  
-  .nav__link{
-    font-family: Felidae;
-    color: #000;
-    margin-left: 45px;
-    transition: .5s;
-  }
 
   .header__logo img{
     top: 20%;
@@ -389,9 +394,14 @@ li .text__l{
 
 @media(max-width: 1600px){
   
+  body{
+    font-size: 26pt;
+  }
+
   .header{
     height: 110px;
   }
+
   .header__logo img{
     width: 300px;
   }
@@ -407,12 +417,16 @@ li .text__l{
   .title{
     padding-top: 110px;
   }
+
+  .text__l{
+    margin-right: 100px;
+  }
 }
 
 @media(max-width: 1500px){
 
   body{
-    font-size: 20pt;
+    font-size: 22pt;
   } 
   .header{
     height: 100px;
@@ -435,10 +449,23 @@ li .text__l{
     font-size: 50pt;
     padding-top: 100px;
   }
+
+  .text__l{
+    margin-right: 80px;
+  }
+
+  .button{
+    font-size: 28pt;
+    padding: 10px 70px;
+  }
 }
 
 
 @media(max-width: 1400px){
+
+  body{
+    font-size: 18pt;
+  }
 
   .header{
     height: 80px;
@@ -451,9 +478,9 @@ li .text__l{
   }
 
   .header__logo img{
-    left: 40%;
+    left: 45%;
     top: 20%;
-    width: 230px;
+    width: 240px;
   }
 
   .title{
@@ -469,9 +496,8 @@ li .text__l{
 @media(max-width:1200px){
 
   body{
-    font-size: 18pt;
+    font-size: 17pt;
   }
-
 
   .header__inner{
     font-size: 15pt;
@@ -489,6 +515,15 @@ li .text__l{
 
   .contacts{
     padding-bottom: 150px;
+  }
+
+  .text__l{
+    margin-right: 60px;
+  }
+
+  .button{
+    font-size: 24pt;
+    padding: 8px 65px;
   }
 }
 
@@ -533,6 +568,15 @@ li .text__l{
   display: block;
   top: 40%;
 }
+
+.text__l{
+  margin-right: 45px;
+}
+
+.button{
+  font-size: 20pt;
+  padding: 6px 60px;
+}
 }
 
 @media(max-width:1000px){
@@ -556,6 +600,12 @@ li .text__l{
   .text__ll{
     margin: 0 30px;
   }
+
+  .button{
+    font-size: 18pt;
+    padding: 6px 60px;
+    right: 0;
+  }
 }
 
 @media(max-width:860px){
@@ -569,25 +619,15 @@ li .text__l{
     padding-top: 100px;
   }
 
-  .text__reg{
-    font-size: 14pt;
-  }
 
   .icon{
     width: 50px;
   }
 
-  .facebook{
-    width: 70px; 
-    margin-left: -10px; margin-top: -10px;
-  }
-
-  .facebook__a{
-    margin-left: -10px;margin-top: -10px;
-  }
-
-  .whatsapp{
-    margin-top: -15px;
+  .button{
+    font-size: 16pt;
+    padding: 5px 55px;
+    right: 0;
   }
 }
 
@@ -613,9 +653,12 @@ li .text__l{
     font-size:12pt ;
   }
 
-  .text__reg{
-    font-size: 12pt;
+  .button{
+    font-size: 14pt;
+    padding: 4px 50px;
+    right: -2%;
   }
+
 }
 
 @media(max-width:620px){
@@ -690,13 +733,13 @@ li .text__l{
     font-size: 25pt;
   }
 
-  .text__reg{
-    font-size: 9pt;
-    padding-left: 0px;
-  }
-
   .section img {
     padding: 0 15px;
+  }
+
+  .button{
+    font-size: 12pt;
+    padding: 4px 47px;
   }
   
 }
@@ -716,8 +759,21 @@ li .text__l{
     margin: 0 15px;
   }
 
+  .group__txt{
+    padding-top: 0;
+  }
+
   .section img {
     padding: 0 20px;
+  }
+
+  .text__reg{
+    text-indent: 10px;
+  }
+
+  .button{
+    font-size: 9pt;
+    padding: 3px 35px;
   }
   
 }
