--- a/school/registration/style.css
+++ b/school/registration/style.css
@@ -14,7 +14,9 @@ input:focus{
 } 
 body{
   display:flex;
-  justify-content:center;align-items:center;background-color:#fff;
+  justify-content:center;
+  align-items:center;
+  background-color:#fff;
   color:#000;
   font-size:16px;
   font-family:'Open Sans',sans-serif;
