--- a/monte-i/style.css
+++ b/monte-i/style.css
@@ -359,16 +359,19 @@ height: 100%;
   width: 24%;
   font-size: 11pt;
   font-weight: 400;
+  border-bottom: 2px solid #fff;
   transition: .4s;
+  padding-bottom: 10px;
 }
 
 .card:hover{
   transform: translate3d(-2px,-2px,0);
+  border-bottom: 2px solid #f35e49;
 }
-
 
 .cards .card:first-child{
   padding: 0;
+  padding-bottom: 10px;
 }
 
 .card__link{
@@ -396,7 +399,6 @@ height: 100%;
 .card__price{
   margin-bottom: 0;
 }
-
 
 /* Media
 ================================= */
