--- a/monte-i/style.css
+++ b/monte-i/style.css
@@ -422,6 +422,9 @@ height: 100%;
 .cards__sell{
   display: none;
 }
+/*Slider
+====================================*/
+
 
 /* Media
 ================================= */
