--- a/school/main/style.css
+++ b/school/main/style.css
@@ -52,8 +52,8 @@ a{
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 p{
@@ -630,6 +630,7 @@ li .text__l{
 
 .lang{
   padding-right: 10px;
+  color: #000;
 }
 .lang:nth-child(2) {
   padding-right: 0;
