--- a/school/main/style.css
+++ b/school/main/style.css
@@ -462,7 +462,7 @@ li .text__l{
   }
 
   .nav__reg{
-    padding-left: 25%;
+    padding-left: 24%;
   }
 
   .title{
@@ -486,12 +486,15 @@ li .text__l{
   .header{
     height: 100px;
   }
+  .header__logo img{
+    left: 37%;
+  }
   .nav__link{
     margin-left: 80px;
   }
 
   .nav__reg{
-    padding-left: 27%;
+    padding-left: 26%;
   }
 
   .section img{
@@ -541,7 +544,7 @@ li .text__l{
   }
 
   .nav__reg{
-    padding-left: 30%;
+    padding-left: 29%;
   }
 
   .contact a{
@@ -698,6 +701,10 @@ li .text__l{
     margin: 0 30px;
   }
 
+  .text__reg{
+    margin-left: 10px;
+  }
+
   .button{
     font-size: 18pt;
     padding: 6px 60px;
@@ -753,6 +760,10 @@ li .text__l{
     margin: 0 15px;
   }
 
+  li .text__r {
+    text-indent: 0;
+  }
+
    ul {
     padding-left: 65px;
    }
@@ -798,6 +809,7 @@ li .text__l{
     margin: 0 5px;
   }
 
+
    ul {
     padding-left: 65px;
    }
@@ -805,6 +817,10 @@ li .text__l{
   .text__l {
     margin: 0;
     margin-left: 30px;
+  }
+
+  .text__reg{
+    margin-left: 10px;
   }
 
   .section img {
