--- a/monte-i/styles/style.css
+++ b/monte-i/styles/style.css
@@ -475,32 +475,61 @@ height: 100%;
 .avia{
   display: none;
 }
+
 th{
-  padding: 10px;
+  padding: 12px 8px;
 }
-.bus__col{
-  display: flex;
-  justify-content: center;
-}
+
 .bus__table{
-  font-size: 11pt;
+  width: 100%;
+  font-size: 14pt;
   text-transform: uppercase;
 }
 .bus__table tr:hover{
   background-color: #f4f4f4;
 }
 .bus__top {
-  font-weight: 500;
+  font-weight: 600;
   background-color: #f35e49;
   color: #fff;
 }
+
 .bus__table .bus__top:hover{
   background-color: #f35e49;
 }
-.bus__item{
+.bus__item{ 
   cursor: pointer;
-  font-size: 14pt;
 }
+
+.table__first{
+  display: block;
+}
+
+.table__second{
+  display: none;
+}
+
+.spoiler_arrow {
+  cursor: pointer;
+}
+
+.spoiler_arrow svg {
+  fill: #f35e49;
+  width: 20px;
+  margin: 10px;
+}
+
+.spoiler_arrow svg:hover{
+  fill: #a93f31;
+}
+.second__arrow svg{
+  rotate: 180deg;
+}
+.second__arrow{
+  display: none;
+  cursor: pointer;
+}
+
 
 
 /* Media
