--- a/monte-i/styles/style.css
+++ b/monte-i/styles/style.css
@@ -181,10 +181,10 @@ body{
   "advertising advertising-3 advertising-2"
   "advertising realty advertising-2"
   "advertising food advertising-2"
-  "advertising job advertising-2"
+  "advertising poster  advertising-2"
   "advertising transport advertising-2"
-  "advertising poster advertising-2"
-  "advertising polyclinics advertising-2";
+  "advertising polyclinics advertising-2"
+  "advertising job advertising-2";
 }
 
 .main div:first-child{
