--- a/monte-i/styles/style.css
+++ b/monte-i/styles/style.css
@@ -28,6 +28,7 @@ input {
 html {
   height: 100%;
   scroll-behavior: smooth;
+  scroll-padding-top: 60px;
 }
 body {
     line-height: 1;
@@ -87,7 +88,7 @@ body{
 }
 
 .head{
-  position: absolute;
+  position: fixed;
   width: 100%; 
   align-items:baseline;
   height: 60px;
@@ -116,6 +117,7 @@ body{
   padding-top: 18px;
   margin-left: 25%;
   cursor: pointer;
+  z-index: 200;
 }
 
 
@@ -140,28 +142,7 @@ body{
 }
 
 
-/* Navig__left
-=================================*/
 
-.navig__left{
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  font-size: 12pt;
-  font-weight: 500;
-  margin-top: 40%;
-}
-
-.navig__left li {	
-  list-style: none;
-	margin: 0;
-  padding: 10px 0;	
-  background: url(data:image/gif;base64,R0lGODlhAwABAIAAAM/R1P///yH5BAAAAAAALAAAAAADAAEAAAICRFIAOw==) repeat-x left bottom;
-}
-
-.navig__left a{
-  padding-left: 10px;
-}
 
 .main{
   display: grid;
@@ -171,8 +152,8 @@ body{
 	grid-gap: 20px 10px;
 	grid-template-areas:
   "navigation__left search advertising-2"
-  "navigation__left news advertising-2"
-	"navigation__left weather advertising-2"
+  "advertising news advertising-2"
+	"advertising weather advertising-2"
   "advertising banks advertising-2"
   "advertising car advertising-2"
 	"advertising boats advertising-2"
@@ -183,7 +164,8 @@ body{
   "advertising transport advertising-2"
   "advertising advertising-4  advertising-2"
   "advertising polyclinics advertising-2"
-  "advertising job advertising-2";
+  "advertising job advertising-2"
+  "footer footer footer";
 }
 
 .main div:first-child{
@@ -240,6 +222,10 @@ body{
 
 .advertising-4{
   grid-area: advertising-4;
+}
+
+.footer{
+  grid-area: footer;
 }
 
 .navigation__left{
@@ -433,10 +419,6 @@ height: 100%;
 /*Job
 ====================================*/
 
-.job{
-margin-bottom: 100px;
-}
-
 .vacancies{
   margin-left: 20px;
   border-bottom: 2px solid #fff;
@@ -546,13 +528,100 @@ th{
 /* Medicine
 ================================= */
 
-
 td{
   padding: 12px 8px;
 }
 
 
+/* Footer
+================================= */
+svg{
+  padding: 0;
+  margin: 0;
+  height: 30px;
+  width: 30px;
+}
 
+.social {
+  display: flex; 
+}
+
+.social--footer {
+  justify-content: center;
+}
+
+.social__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  transition: background.2s linear;
+}
+
+.social_icon{
+  fill: #fff;
+  transition: .3s;
+}
+
+.social__link:hover .social_icon{
+  fill:#a93f31;
+}
+
+.footer {
+  background-color: #f35e49;;
+}
+
+.footer__inner {
+  padding: 70px 0;
+  display: flex;
+}
+
+.footer__block {
+  width: 33.33333%;
+  text-align: center;
+  padding: 15px;
+}
+
+.footer__title {
+  font-size: 14pt;
+  font-weight: 700;
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.footer__text{
+  font-size: 14pt;
+  font-weight: 500;
+}
+
+.mail{
+  font-size: 16pt;
+  font-weight: 500;
+  color: #000;
+  transition: .3s;
+}
+
+.mail:hover{
+  color: #fff;
+}
+
+/* Copyright
+========================== */
+
+.copyright {
+  padding: 20px 0;
+  background-color: #a93f31;
+}
+
+.copyright__text {
+  text-align: center;
+
+}
+
+.copyright__text span {
+  color: #fff;
+}
 
 /* Media
 ================================= */
