--- a/monte-i/styles/menu.css
+++ b/monte-i/styles/menu.css
@@ -12,7 +12,7 @@
   top: -100%;
   width: 170px;
   margin: 0;
-  padding: 80px 0;
+  padding-top: 80px;
   list-style: none;
   background-color: #fff;
   transition-duration: .25s;
