--- a/monte-i/styles/menu.css
+++ b/monte-i/styles/menu.css
@@ -10,7 +10,7 @@
   position: fixed;
   visibility: hidden;
   top: -100%;
-  width: 170px;
+  width: 200px;
   margin: 0;
   padding-top: 80px;
   list-style: none;
@@ -59,6 +59,11 @@
 .navig__left a:hover svg{
   fill: #f35e49;
 }
+
+.navig__left .beautifuls{
+  margin-top: 30px
+}
+
 .menu__but{
   position: relative;
   background-color: #f35e49;
