--- a/monte-i/styles/slider.css
+++ b/monte-i/styles/slider.css
@@ -30,11 +30,11 @@
   transition: .4s;
   padding-left: 10px;
   color: rgba(255,255,255, 0);
-  opacity: .7;
+  opacity: 1;
 }
 .slider:hover{
   color: rgba(255,255,255, 1);
-  opacity: 1;
+  opacity: .7;
 }
 
 .sliders .slider:first-child{
@@ -60,13 +60,35 @@
   border-radius: 5px;
 }
 
-.slider__picture h3{
+.slider__picture h3{ 
+  font-weight: 700;
   font-size: 22pt;
   position: absolute;
   top: 40%;
   left: 30%;
   z-index: 5;
   cursor: pointer;
+}
+
+.slider__school h3{
+  font-size: 18pt;
+  top: 30%;
+  left: 18%;
+}
+
+.slider .slider__school h3{
+  background-color: transparent;
+  border: 4px solid transparent;
+  border-radius: 5px;
+}
+
+.slider:hover .slider__school h3{
+  background-color: #f35e49;
+  border: 4px solid #f35e49;
+}
+
+.slider:hover h3{
+  opacity: 1;
 }
 
 
