--- a/monte-i/styles/slider.css
+++ b/monte-i/styles/slider.css
@@ -16,6 +16,12 @@
   z-index: 5;
 }
 
+.school__display::before,
+.school__display::after{
+  height: 200px;
+}
+
+
 .slider__display::after{
   right: 0;
   transform: rotateZ(180deg);
@@ -31,6 +37,7 @@
   padding-left: 10px;
   color: rgba(255,255,255, 0);
   opacity: 1;
+  text-align: center;
 }
 .slider:hover{
   color: rgba(255,255,255, 1);
@@ -68,12 +75,13 @@
   left: 30%;
   z-index: 5;
   cursor: pointer;
+  opacity: 1;
 }
 
 .slider__school h3{
   font-size: 18pt;
-  top: 30%;
-  left: 18%;
+  top: 25%;
+  left: 12%;
 }
 
 .slider .slider__school h3{
@@ -83,14 +91,23 @@
 }
 
 .slider:hover .slider__school h3{
-  background-color: #f35e49;
-  border: 4px solid #f35e49;
+  background-color: rgba(243, 94, 73, .8);
+  border: 4px solid rgba(243, 94, 73, .5);
 }
 
-.slider:hover h3{
+.slider__desc{
+  color: #333;
   opacity: 1;
+  padding-top: 10px;
 }
 
+.slider__desc h3{
+  font-weight: 500;
+}
+
+.slider__desc *{
+  padding-top: 5px;
+}
 
 .sliders .slick-arrow {
   position: absolute;
@@ -106,6 +123,9 @@
   transition: .4s;
 }
 
+.school__sliders .slick-arrow{
+  font-size: 34px;
+}
 
 .sliders .slick-arrow:hover{
   opacity: 1;
