--- a/monte-i/styles/style.css
+++ b/monte-i/styles/style.css
@@ -14,6 +14,15 @@
   padding: 3px 5px;
 }
 
+.marqu{
+  font-size: 16pt;
+  font-weight: 700;
+  position: absolute;
+  height: 100%;
+  width: 70%;
+  top: 40%;
+  left: 16%;
+}
 /* Navig
 =================================*/
 
